@@ -3,10 +3,11 @@
 <GCompris>
   <Skin>
     <!-- Defines the gcompris colors -->
-    <color id="gcompris/title"       rgba="0x0F0FC0FF"/>
-    <color id="gcompris/text button" rgba="0xFFFFFFFF"/>
-    <color id="gcompris/content"     rgba="0x0D0DFAFF"/>
-    <color id="gcompris/subtitle"    rgba="0xB00400FF"/>
+    <color id="gcompris/title"        rgba="0x0F0FC0FF"/>
+    <color id="gcompris/text button"  rgba="0xFFFFFFFF"/>
+    <color id="gcompris/content"      rgba="0x0D0DFAFF"/>
+    <color id="gcompris/subtitle"     rgba="0xB00400FF"/>
+    <color id="gcompris/fileselectbg" rgba="0xf6f9b1FF"/>
 
     <!-- Defines the main gcompris fonts -->
     <font id="gcompris/title"    name="Sans 20"/>
