@@ -7,6 +7,7 @@
     <color id="gcompris/text button" rgba="0x505E00FF"/>
     <color id="gcompris/content"     rgba="0x404E00FF"/>
     <color id="gcompris/subtitle"    rgba="0x707E00FF"/>
+    <color id="gcompris/fileselectbg" rgba="0xf6f9b1FF"/>
 
     <!-- Defines the main gcompris fonts -->
     <font id="gcompris/title"    name="Sans 20"/>
