@@ -7,6 +7,7 @@
     <color id="gcompris/text button" rgba="0xFFFFFFFF"/>
     <color id="gcompris/content"     rgba="0xFA0DFAFF"/>
     <color id="gcompris/subtitle"    rgba="0x00B0B0FF"/>
+    <color id="gcompris/fileselectbg" rgba="0xf6f9b1FF"/>
 
     <!-- Defines the main gcompris fonts -->
     <font id="gcompris/title"    name="Sans 20"/>
